--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@11labs/react": "^0.0.4",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
@@ -14,6 +15,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@react-spring/web": "^9.7.5",
     "@react-three/fiber": "^8.17.10",
+    "@react-three/postprocessing": "^2.16.3",
     "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -25,11 +27,16 @@
     "@use-gesture/react": "^10.3.1",
     "axios": "^1.7.7",
     "date-fns": "^2.0.0",
-    "framer-motion": "^11.11.11",
+    "elevenlabs": "^1.50.2",
+    "framer-motion": "^11.15.0",
+    "gasp": "^0.0.2",
     "lucide-react": "^0.454.0",
+    "microsoft-cognitiveservices-speech-sdk": "^1.42.0",
     "moment-timezone": "^0.5.46",
+    "never": "^1.1.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-chartjs-2": "^5.2.0",
     "react-date-range": "^1.4.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
@@ -40,11 +47,12 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
-    "recharts": "^2.13.3",
+    "recharts": "^2.15.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.1.15",
     "three": "^0.171.0",
     "typescript": "^4.9.5",
