--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@hookform/resolvers": "^3.9.0",
+    "@react-spring/three": "^9.7.5",
     "@react-spring/web": "^9.7.5",
     "@react-three/fiber": "^8.17.10",
     "@react-three/postprocessing": "^2.16.3",
